<resources>
    <string name="app_name">Animation</string>
    <string name="zoom_in">zoom in</string>
    <string name="zoom_out">zoom out</string>
    <string name="fade_in">fade in</string>
    <string name="fade_out">fade out</string>
    <string name="slide_left">slide left</string>
    <string name="slide_right">slide right</string>
    <string name="slide_up">silde up</string>
    <string name="slide_down">silde down</string>
    <string name="zoom_in_fade_in"><![CDATA[zoom in & fade in]]></string>
    <string name="zoom_out_fade_out"><![CDATA[zoom out & fade out]]></string>
    <string name="rotate">rotate</string>
    <string name="move">move</string>
</resources>